<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    android:padding="20dp">

    <TextView
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/user_name"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="Marvin's JOBS">

    </TextView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="204dp"
        android:layout_height="144dp"
        android:contentDescription="@string/jobimg1"
        app:srcCompat="@drawable/im" />


    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onApplyClick"
        android:text="@string/jobbtn1"
        tools:text="APPLY" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="208dp"
        android:layout_height="147dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/j" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onApplyClick2"
        android:text="@string/jobbtn2"
        tools:text="APPLY" />


</LinearLayout>
